--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.6.2"
   }
 }
