--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.24.8",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scrollable-feed": "^1.3.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
