--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "learn-app",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.7",
@@ -19,6 +20,7 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-intl": "^5.24.8",
     "react-query": "^3.34.19",
     "react-redux": "^7.2.6",
@@ -61,6 +63,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/react-image-gallery": "^1.0.5",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
     "redux-devtools-extension": "^2.13.9",
