--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.20.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
